--- a/guli-parent/service/pom.xml
+++ b/guli-parent/service/pom.xml
@@ -17,6 +17,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>service-base</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
         </dependency>
