--- a/guli-parent/service/service-edu/src/main/resources/application.properties
+++ b/guli-parent/service/service-edu/src/main/resources/application.properties
@@ -16,3 +16,10 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #\u8FD4\u56DEjson\u7684\u5168\u5C40\u65F6\u95F4\u683C\u5F0F--\u9ED8\u8BA4\u60C5\u51B5\u4E0Bjson\u65F6\u95F4\u683C\u5F0F\u5E26\u6709\u65F6\u533A\uFF0C\u5E76\u4E14\u662F\u4E16\u754C\u6807\u51C6\u65F6\u95F4\uFF0C\u548C\u6211\u4EEC\u7684\u65F6\u95F4\u5DEE\u4E86\u516B\u4E2A\u5C0F\u65F6
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+
+
+# \u8BBE\u7F6E\u65E5\u5FD7\u7EA7\u522B--\u8FD9\u79CD\u65B9\u5F0F\u53EA\u80FD\u5C06\u65E5\u5FD7\u6253\u5370\u5728\u63A7\u5236\u53F0\u4E0A
+#logging.level.root=WARN
+# \u60F3\u81EA\u5B9A\u4E49\u547D\u540D,\u9700\u8981\u5728application.yml\u4E0A\u52A0\u4E0A\u914D\u7F6E
+logging.config= classpath:logback-spring.xml
+
