--- a/guli-parent/service/pom.xml
+++ b/guli-parent/service/pom.xml
@@ -13,6 +13,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>service-edu</module>
+        <module>service-oss</module>
+        <module>test</module>
     </modules>
 
     <dependencies>
@@ -108,6 +110,9 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+
+
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
