--- a/guli-parent/service/service-edu/pom.xml
+++ b/guli-parent/service/service-edu/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>service-edu</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+        </dependency>
+    </dependencies>
 </project>
