--- a/guli-parent/service/service-edu/pom.xml
+++ b/guli-parent/service/service-edu/pom.xml
@@ -17,4 +17,19 @@
             <artifactId>easyexcel</artifactId>
         </dependency>
     </dependencies>
+
+    <!-- 项目打包时会将java目录中的*.xml文件也进行打包
+    dao层编译后只有class文件，没有mapper.xml，因为maven工程在默认情况下src/main/java目录下的所
+    有资源文件是不发布到target目录下的-->
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
