--- a/guli-parent/service/service-edu/src/main/resources/application.properties
+++ b/guli-parent/service/service-edu/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.jackson.time-zone=GMT+8
 # \u60F3\u81EA\u5B9A\u4E49\u547D\u540D,\u9700\u8981\u5728application.yml\u4E0A\u52A0\u4E0A\u914D\u7F6E
 logging.config= classpath:logback-spring.xml
 
+#\u914D\u7F6Emapper xml\u6587\u4EF6\u7684\u8DEF\u5F84
+mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
