微服务- nacos注册/feign调用

--- a/guli-parent/service/pom.xml
+++ b/guli-parent/service/pom.xml
@@ -15,6 +15,7 @@
         <module>service-edu</module>
         <module>service-oss</module>
         <module>test</module>
+        <module>service-vod</module>
     </modules>
 
     <dependencies>
