--- a/guli-parent/pom.xml
+++ b/guli-parent/pom.xml
@@ -30,7 +30,7 @@
         <swagger-annotations.version>1.6.0</swagger-annotations.version>
         <guava.version>20.0</guava.version>
 
-        <aliyun.oss.version>2.8.3</aliyun.oss.version>
+<!--        <aliyun.oss.version>2.8.3</aliyun.oss.version>-->
         <jodatime.version>2.10.1</jodatime.version>
         <poi.version>3.17</poi.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
@@ -38,10 +38,10 @@
         <httpclient.version>4.5.1</httpclient.version>
         <jwt.version>0.7.0</jwt.version>
         <aliyun-java-sdk-core.version>4.3.3</aliyun-java-sdk-core.version>
-        <aliyun-sdk-oss.version>3.1.0</aliyun-sdk-oss.version>
-        <aliyun-java-sdk-vod.version>2.15.2</aliyun-java-sdk-vod.version>
+<!--        <aliyun-sdk-oss.version>3.1.0</aliyun-sdk-oss.version>-->
+        <aliyun-java-sdk-vod.version>2.15.11</aliyun-java-sdk-vod.version>
         <aliyun-java-vod-upload.version>1.4.11</aliyun-java-vod-upload.version>
-        <aliyun-sdk-vod-upload.version>1.4.11</aliyun-sdk-vod-upload.version>
+        <aliyun-sdk-vod-upload.version>1.4.13</aliyun-sdk-vod-upload.version>
         <aliyun-sdk-oss.version>3.10.2</aliyun-sdk-oss.version>
         <fastjson.version>1.2.28</fastjson.version>
         <gson.version>2.8.2</gson.version>
@@ -116,12 +116,7 @@
             </dependency>
 
 
-            <!--aliyunOSS-->
-            <dependency>
-                <groupId>com.aliyun.oss</groupId>
-                <artifactId>aliyun-sdk-oss</artifactId>
-                <version>${aliyun.oss.version}</version>
-            </dependency>
+
             <!--日期时间工具-->
             <dependency>
                 <groupId>joda-time</groupId>
@@ -175,26 +170,27 @@
                 <artifactId>aliyun-java-sdk-core</artifactId>
                 <version>${aliyun-java-sdk-core.version}</version>
             </dependency>
+            <!--aliyunOSS-->
             <dependency>
                 <groupId>com.aliyun.oss</groupId>
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>${aliyun-sdk-oss.version}</version>
             </dependency>
-            <!--            <dependency>-->
-            <!--                <groupId>com.aliyun</groupId>-->
-            <!--                <artifactId>aliyun-java-sdk-vod</artifactId>-->
-            <!--                <version>${aliyun-java-sdk-vod.version}</version>-->
-            <!--            </dependency>-->
+                        <dependency>
+                            <groupId>com.aliyun</groupId>
+                            <artifactId>aliyun-java-sdk-vod</artifactId>
+                            <version>${aliyun-java-sdk-vod.version}</version>
+                        </dependency>
             <!--            <dependency>-->
             <!--                <groupId>com.aliyun</groupId>-->
             <!--                <artifactId>aliyun-java-vod-upload</artifactId>-->
             <!--                <version>${aliyun-java-vod-upload.version}</version>-->
             <!--            </dependency>-->
-            <!--            <dependency>-->
-            <!--                <groupId>com.aliyun</groupId>-->
-            <!--                <artifactId>aliyun-sdk-vod-upload</artifactId>-->
-            <!--                <version>${aliyun-sdk-vod-upload.version}</version>-->
-            <!--            </dependency>-->
+                        <dependency>
+                            <groupId>com.aliyun</groupId>
+                            <artifactId>aliyun-sdk-vod-upload</artifactId>
+                            <version>${aliyun-sdk-vod-upload.version}</version>
+                        </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
