--- a/guli-parent/service/service-edu/src/main/resources/application.properties
+++ b/guli-parent/service/service-edu/src/main/resources/application.properties
@@ -25,3 +25,6 @@ logging.config= classpath:logback-spring.xml
 
 #\u914D\u7F6Emapper xml\u6587\u4EF6\u7684\u8DEF\u5F84
 mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
+
+# nacos\u670D\u52A1\u5730\u5740
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
